<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/configure"
            android:onClick="menuSelectSettings"
            />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_account"
            android:onClick="menuSelectAccount"
            />
    </group>
</menu>